--- a/src/pages/Ranking.css
+++ b/src/pages/Ranking.css
@@ -1,46 +1,44 @@
-
 html {
-  width: 100%;
+
+  /* background-image: linear-gradient(to right, rgb(16, 240, 217),
+   rgb(229, 229, 229), rgb(229, 229, 229), rgb(16, 240, 217)); */
+  background-color: rgb(152, 240, 238);
   height: 100%;
-  background-image: linear-gradient( to right, rgb(16, 240, 217), rgb(229, 229, 229), rgb(229, 229, 229), rgb(16, 240, 217) )
-}
-
-h1 {
-
+  width: 100%;
 }
 
 .cointainer-page-ranking {
+  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   margin-top: 50px;
 }
 
 .container-users-ranking {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  width: 70%;
   height: 100%;
-  align-items: center;
+  width: 70%;
 }
 
 .container-user {
+  background-color: rgb(255, 251, 251);
   border: 2px solid rgba(99, 95, 95, 0.211);
   border-radius: 40px;
+  box-shadow: 6px 3px 3px rgb(202, 198, 198);
   display: flex;
-  width: 24%;
   height: 40px;
   margin: 7px 0;
-  background-color: rgb(255, 251, 251);
-  box-shadow: 6px 3px 3px rgb(202, 198, 198)
+  width: 24%;
 }
 
 .img-user {
   border-radius: 50%;
-  width: 30px;
   height: 30px;
-  padding: 5px 5px 5px 5px;
+  padding: 5px;
+  width: 30px;
 }
 
 .name-score-user {
@@ -50,10 +48,10 @@ h1 {
 }
 
 .score-user {
+  color: rgb(218, 233, 50);
   font-size: large;
   font-weight: 800;
   padding-left: 40px;
-  color: rgb(218, 233, 50);
 }
 
 .pts {
@@ -62,20 +60,22 @@ h1 {
 }
 
 .ranking-btn {
-  margin-top: 20px;
-  border-radius: 4px;
-  width: 180px;
-  height: 30px;
+  background-color: #16eb9d;
   border: 1.5px solid black;
+  border-radius: 4px;
+
   /* border: none; */
   cursor: pointer;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: Gill Sans , Gill Sans MT , Calibri , Trebuchet MS , sans-serif;
   font-weight: 700;
-  background-color: #16eb9d;
+  height: 30px;
+  margin-top: 20px;
+  width: 180px;
 }
 
 .ranking-btn:hover {
   background-color: #05ffff;
   border: none;
+
   /* border: 2px solid rgba(185, 163, 163, 0.427) */
 }
