--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,23 +1,24 @@
 .container {
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  min-height: 100vh;
   background-image: url('https://images5.alphacoders.com/436/436582.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-.form {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  background-color: #ffffff;
-  padding: 2rem;
+  min-height: 100vh;
+}
+
+.form {
+  align-items: center;
+  background-color: white;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 2rem;
 }
 
 .label {
@@ -28,34 +29,34 @@
 }
 
 .input {
-  padding: 0.5rem;
-  font-size: 1rem;
   border: 1px solid #ccc;
   border-radius: 4px;
+  font-size: 1rem;
+  padding: 0.5rem;
   width: 100%;
 }
 
 .button {
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  font-size: 1rem;
   margin-top: 1rem;
+  padding: 0.5rem 1rem;
 }
 
 .btn-settings {
   background-color: #007bff;
-  color: #ffffff;
+  color: white;
   margin-right: 1rem;
 }
 
 .btn-play {
   background-color: #28a745;
-  color: #ffffff;
+  color: white;
 }
 
 .button:disabled {
-  opacity: 0.6;
   cursor: not-allowed;
+  opacity: 0.6;
 }
