🎨 feat: login css

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* stylelint-disable max-line-length */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,5 +6,6 @@
 }
 
 html {
+  background: linear-gradient(133deg, rgb(21, 74, 189) 0.1%, rgb(26, 138, 211) 51.5%, rgb(72, 177, 234) 100.2%);
   font-family: Verdana , Geneva , Tahoma , sans-serif;
 }
