--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,62 +1,106 @@
 .login-container {
   align-items: center;
-  background-image: url('https://images5.alphacoders.com/436/436582.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   display: flex;
-  flex-direction: column;
+  height: 100vh;
   justify-content: center;
-  min-height: 100vh;
+  width: 100%;
 }
 
 .login-container .form {
   align-items: center;
   background-color: white;
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
+  gap: 16px;
   justify-content: center;
-  margin: 16px;
-  padding: 2rem;
+  margin: 0 8px;
+  padding: 16px;
 }
 
-.login-container .label {
+.login-container .input-container {
   display: flex;
-  flex-direction: column;
-  margin-bottom: 1rem;
+  gap: 4px;
+  justify-content: space-between;
   width: 100%;
 }
 
-.login-container .input {
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 1rem;
-  padding: 0.5rem;
+.login-container .trivia-logo {
+  width: 360px;
+}
+
+.login-container .input-container input {
+  border: 1px solid blue;
+  border-radius: 8px;
+  text-align: center;
+  text-decoration: none;
   width: 100%;
 }
 
-.login-container .button {
-  border: none;
-  border-radius: 4px;
+.login-container .buttons-container {
+  display: flex;
+  gap: 4px;
+  justify-content: space-between;
+  width: 100%;
+}
+
+/* https://getcssscan.com/css-buttons-examples?
+ref=beautifulboxshadow-bottom - button por GreenLight + ajustes meus */
+
+.button-64 {
+  align-items: center;
+  background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+  border: 0;
+  border-radius: 8px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: white;
+  display: flex;
+  justify-content: center;
+  padding: 3px;
+  text-decoration: none;
+  touch-action: manipulation;
+  user-select: none;
+  white-space: nowrap;
+  width: 100%;
+}
+
+.button-64:not( :disabled ) {
   cursor: pointer;
-  font-size: 1rem;
-  margin-top: 1rem;
-  padding: 0.5rem 1rem;
 }
 
-.login-container .btn-settings {
-  background-color: #007bff;
-  color: white;
+.button-64:active, .button-64:not( :disabled ):hover {
+  outline: 0;
 }
 
-.login-container .btn-play {
-  background-color: #28a745;
-  color: white;
+.button-64 span {
+  align-items: center;
+  background-color: rgb(5, 6, 45);
+  border-radius: 6px;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  transition: 300ms;
+  width: 100%;
 }
 
-.login-container .button:disabled {
-  cursor: not-allowed;
-  opacity: 0.6;
+.button-64:disabled span {
+  background-color: rgb(55, 55, 55);
+}
+
+.button-64:not( :disabled ):hover span {
+  background: none;
+}
+
+@media only screen and ( min-width : 768px ) {
+
+  .login-container .input-container {
+    font-size: 1.2rem;
+    height: 40px;
+  }
+
+  .button-64 {
+    font-size: 1.2rem;
+    height: 40px;
+  }
 }
