--- a/src/pages/Game.css
+++ b/src/pages/Game.css
@@ -1,3 +1,36 @@
+.main {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  height: 100%;
+  justify-content: center;
+  padding: 16px;
+  width: 100%;
+}
+
+.main .question-container {
+  align-items: center;
+  background-color: lightblue;
+  border-radius: 32px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  max-height: 300px;
+  max-width: 600px;
+  padding: 8px;
+  width: 100%;
+}
+
+.main .answers-container {
+  display: flex;
+  flex-flow: column wrap;
+  gap: 8px;
+  max-width: 270px;
+  width: 100%;
+}
+
 .green {
   border-color: rgb(6, 240, 15);
   border-style: solid;
@@ -8,4 +41,22 @@
   border-color: red;
   border-style: solid;
   border-width: 3px;
+}
+
+@media only screen and ( min-width : 768px ) {
+
+  .main {
+    flex-direction: row;
+  }
+
+  .main .question-container {
+    max-width: unset;
+    width: 720px;
+  }
+
+  .main .answers-container {
+    max-width: 350px;
+    overflow-wrap: break-word;
+    width: 100%;
+  }
 }
