--- a/src/pages/Game.css
+++ b/src/pages/Game.css
@@ -12,15 +12,35 @@
 .main .question-container {
   align-items: center;
   background-color: lightblue;
-  border-radius: 32px;
+  border-radius: 16px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
   display: flex;
   flex-direction: column;
   height: 100%;
-  justify-content: center;
+  justify-content: space-between;
   max-height: 300px;
   max-width: 600px;
   padding: 8px;
+  text-align: center;
   width: 100%;
+}
+
+.main .question-category {
+  background-color: rgb(187, 2, 187);
+  border-radius: 16px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
+  color: white;
+  font-size: 1rem;
+  margin-top: -24px;
+  padding: 4px;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+.main .timer {
+  background: linear-gradient(319.6deg, rgb(243, 0, 79) 20.5%, rgb(255, 236, 68) 110.9%);
+  background-clip: text;
+  color: transparent;
 }
 
 .main .answers-container {
@@ -31,16 +51,21 @@
   width: 100%;
 }
 
-.green {
-  border-color: rgb(6, 240, 15);
-  border-style: solid;
-  border-width: 3px;
+.main .button-64 span {
+  min-height: 32px;
 }
 
-.red {
-  border-color: red;
-  border-style: solid;
-  border-width: 3px;
+.main .green {
+  background: linear-gradient(to left, #0fd850 0%, #f9f047 100%);
+}
+
+.main .red {
+  background: linear-gradient(319.6deg, rgb(243, 0, 79) 20.5%, rgb(255, 236, 68) 110.9%);
+
+}
+
+.main .button-64:disabled span {
+  background-color: none;
 }
 
 @media only screen and ( min-width : 768px ) {
@@ -56,7 +81,6 @@
 
   .main .answers-container {
     max-width: 350px;
-    overflow-wrap: break-word;
     width: 100%;
   }
 }
