--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,7 @@ ref=beautifulboxshadow-bottom - button por GreenLight + ajustes meus */
   display: flex;
   height: 100%;
   justify-content: center;
+  padding: 4px;
   transition: 300ms;
   width: 100%;
 }
