--- a/src/pages/Config.css
+++ b/src/pages/Config.css
@@ -1,4 +1,28 @@
 .config-container .form {
+  align-items: center;
+  background-color: lightblue;
+  border-radius: 16px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  max-height: 260px;
+  max-width: 600px;
+  padding: 8px;
+  text-align: center;
+  width: 100%;
+}
+
+.config-container .settings-title {
+  background-color: rgb(187, 2, 187);
+  border-radius: 16px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
+  color: white;
+  font-size: 1rem;
+  margin-top: -24px;
+  padding: 4px;
+  text-transform: uppercase;
   width: 100%;
 }
 
