--- a/src/pages/Feedback.css
+++ b/src/pages/Feedback.css
@@ -5,7 +5,7 @@
   gap: 16px;
   height: 100%;
   justify-content: center;
-  padding: 16px;
+  padding: 116px 16px 16px;
   width: 100%;
 }
 
@@ -62,6 +62,10 @@
 
 
 @media only screen and ( min-width : 768px ) {
+
+  .feedbacks-main {
+    padding: 16px;
+  }
 
   .feedbacks-main .results {
     font-size: 1.3rem;
