--- a/src/pages/Game.css
+++ b/src/pages/Game.css
@@ -5,7 +5,7 @@
   gap: 16px;
   height: 100%;
   justify-content: center;
-  padding: 16px;
+  padding: 60px 16px 16px;
   width: 100%;
 }
 
@@ -72,6 +72,7 @@
 
   .main {
     flex-direction: row;
+    padding-top: 16px;
   }
 
   .main .question-container {
