--- a/src/pages/Config.css
+++ b/src/pages/Config.css
@@ -26,15 +26,34 @@
   width: 100%;
 }
 
-.config-container select {
-  border: 1px solid blue;
-  width: 100%;
-}
-
 .config-container .select-container {
   display: flex;
   gap: 8px;
   width: 100%;
+}
+
+.config-container select {
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  color: #495057;
+  display: block;
+  font-size: 1rem;
+  line-height: 1.5;
+  padding: 0.375rem 0.75rem;
+  transition: border-color 0.15s ease-in-out , box-shadow 0.15s ease-in-out;
+  width: 100%;
+}
+
+
+.select-container label {
+  font-weight: 700;
+  margin: auto;
+}
+
+.config-container select:focus {
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  outline: none;
 }
 
 @media only screen and ( min-width : 768px ) {
