--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,3 +1,8 @@
+.login-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .login-container .input-container {
   display: flex;
   gap: 4px;
